hopefully this fixes the buttons on iphone..

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -52,6 +52,7 @@ a {
   box-shadow: 0 20px 20px -15px #040203;
   transition: 2s;
   margin-top: 0;
+  -webkit-appearance: none;
 }
 
 .button:hover {
